🚧 Make basic html structure

--- a/index.html
+++ b/index.html
@@ -9,5 +9,36 @@
     <link rel="stylesheet" href="/index.css" />
     <script src="/build/main.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div id="container">
+      <header>
+        <h3>MOTION</h3>
+        <ul>
+          <li><span>IMAGE</span></li>
+          <li><span>VIDEO</span></li>
+          <li><span>NOTE</span></li>
+          <li><span>TASK</span></li>
+        </ul>
+      </header>
+      <div>
+        <ul>
+          <li>
+            <div>
+              <img
+                src="https://cdn.pixabay.com/photo/2020/01/16/17/32/pokemon-4771238_960_720.jpg"
+                alt="dummy-image"
+              />
+            </div>
+            <div>
+              <span>image title</span>
+            </div>
+            <div>
+              <button>X</button>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <footer>Copyright is Dream-Coding Academy</footer>
+    </div>
+  </body>
 </html>
