--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="/colors.css" />
     <link rel="stylesheet" href="/index.css" />
     <script src="/build/main.js"></script>
   </head>
