🎨 Styling header component

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div id="container">
       <header>
         <h3>MOTION</h3>
-        <ul>
-          <li><span>IMAGE</span></li>
-          <li><span>VIDEO</span></li>
-          <li><span>NOTE</span></li>
-          <li><span>TASK</span></li>
+        <ul id="header-btn-container">
+          <li class="header-btn-item"><span>IMAGE</span></li>
+          <li class="header-btn-item"><span>VIDEO</span></li>
+          <li class="header-btn-item"><span>NOTE</span></li>
+          <li class="header-btn-item"><span>TASK</span></li>
         </ul>
       </header>
       <div>
