🎨 Styling main section

--- a/index.html
+++ b/index.html
@@ -21,24 +21,103 @@
           <li class="header-btn-item"><span>TASK</span></li>
         </ul>
       </header>
-      <div>
+      <main>
         <ul>
-          <li>
-            <div>
+          <!-- photo card -->
+          <li class="cards">
+            <div class="cards-img-container">
               <img
                 src="https://cdn.pixabay.com/photo/2020/01/16/17/32/pokemon-4771238_960_720.jpg"
                 alt="dummy-image"
               />
             </div>
-            <div>
-              <span>image title</span>
+            <div class="cards-info">
+              <span class="title">image title</span>
             </div>
-            <div>
+            <div class="cards-delete">
+              <button>X</button>
+            </div>
+          </li>
+
+          <!-- video card -->
+          <li class="cards">
+            <div class="cards-iframe-container">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/F0x2_WgM3nw"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="cards-info">
+              <span class="title">image title</span>
+            </div>
+            <div class="cards-delete">
+              <button>X</button>
+            </div>
+          </li>
+
+          <!-- node card -->
+          <li class="cards">
+            <div class="cards-info">
+              <span class="title">image title</span>
+              <p class="description">Note today</p>
+            </div>
+            <div class="cards-delete">
+              <button>X</button>
+            </div>
+          </li>
+
+          <li class="cards">
+            <div class="cards-info">
+              <span class="title">image title</span>
+              <p class="description">Note today</p>
+            </div>
+            <div class="cards-delete">
+              <button>X</button>
+            </div>
+          </li>
+          <li class="cards">
+            <div class="cards-info">
+              <span class="title">image title</span>
+              <p class="description">Note today</p>
+            </div>
+            <div class="cards-delete">
+              <button>X</button>
+            </div>
+          </li>
+          <li class="cards">
+            <div class="cards-info">
+              <span class="title">image title</span>
+              <p class="description">Note today</p>
+            </div>
+            <div class="cards-delete">
+              <button>X</button>
+            </div>
+          </li>
+          <li class="cards">
+            <div class="cards-info">
+              <span class="title">image title</span>
+              <p class="description">Note today</p>
+            </div>
+            <div class="cards-delete">
+              <button>X</button>
+            </div>
+          </li>
+          <li class="cards">
+            <div class="cards-info">
+              <span class="title">image title</span>
+              <p class="description">Note today</p>
+            </div>
+            <div class="cards-delete">
               <button>X</button>
             </div>
           </li>
         </ul>
-      </div>
+      </main>
       <footer>Copyright is Dream-Coding Academy</footer>
     </div>
   </body>
