🎨 Styling footer section

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </li>
         </ul>
       </main>
-      <footer>Copyright is Dream-Coding Academy</footer>
+      <footer>Copyright by Dream-Coding Academy</footer>
     </div>
   </body>
 </html>
