--- a/index.html
+++ b/index.html
@@ -74,5 +74,38 @@
       </main>
       <footer>Copyright by Dream-Coding Academy</footer>
     </div>
+
+    <div class="overlay invisible"></div>
+
+    <!-- 비디오 or 사진 추가 -->
+    <div class="form-box invisible">
+      <header class="form-box-header">
+        <button class="close-btn">X</button>
+      </header>
+      <form action="#">
+        <label for="title">Title</label>
+        <input type="text" />
+        <label for="url">URL</label>
+        <input type="text" />
+      </form>
+      <footer>
+        <button class="submit-btn" type="submit">ADD</button>
+      </footer>
+
+      <!-- 할 일 추가
+    <div class="form-box">
+      <header class="form-box-header">
+        <button class="close-btn">X</button>
+      </header>
+      <form action="#">
+        <label for="title">Title</label>
+        <input type="text" />
+        <label for="body">Body</label>
+        <textarea name="body" id="" cols="20" rows="10"></textarea>
+      </form>
+      <footer>
+        <button class="submit-btn" type="submit">ADD</button>
+      </footer> -->
+    </div>
   </body>
 </html>
