⚡️ Revise header button classNames

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
       <header>
         <h3>MOTION</h3>
         <ul id="header-btn-container">
-          <li class="header-btn-item"><span>IMAGE</span></li>
-          <li class="header-btn-item"><span>VIDEO</span></li>
-          <li class="header-btn-item"><span>NOTE</span></li>
-          <li class="header-btn-item"><span>TASK</span></li>
+          <li class="header-btn-item">
+            <button class="header-btn image-btn">IMAGE</button>
+          </li>
+          <li class="header-btn-item">
+            <button class="header-btn video-btn">VIDEO</button>
+          </li>
+          <li class="header-btn-item">
+            <button class="header-btn note-btn">NOTE</button>
+          </li>
+          <li class="header-btn-item">
+            <button class="header-btn task-btn">TASK</button>
+          </li>
         </ul>
       </header>
       <main>
